・整理 ・品詞 ・goコマンド ・stateパターンシーケンス図 ・sql参考追加

--- a/DB_SQL/00_メモ.md
+++ b/DB_SQL/00_メモ.md
@@ -462,6 +462,11 @@ SELECT SQ.TEST FROM (SELECT NULL AS TEST FROM [SchemaVersions]) AS [SQ]
 - EXCEPTを使った方法(A EXCEPT B)  
 - EXISTSを使った方法
 
+window関数は重いので基本的に候補にはならない。  
+
+重複がなければEXCEPT。  
+重複があるならEXSISTSを使えばいいのではなかろうか。  
+
 あれ？単純にEXCEPTでいいのでは？  
 SELECT AFiled,BField FROM A
 EXCEPT
