--- a/English/品詞.md
+++ b/English/品詞.md
@@ -2,23 +2,50 @@
 
 ---
 
+## 分詞
+
+分詞とは、「動詞＋ing」「動詞＋ed」の形そのもののこと。  
+
+英語の分詞は「現在分詞」と「過去分詞」の2種類。  
+
+[英語【分詞】現在分詞と過去分詞を徹底解説！話すための英文法](https://english-club.jp/blog/english-participle/)  
+[英語の「現在分詞」や「過去分詞」ってなに？英語学習の基礎を徹底解説](https://www.rarejob.com/englishlab/column/20190528/)  
+
+---
+
 ## 現在分詞
 
-形容詞的用法  
-進行形  
-分詞構文  
+現在分詞は「まさに○○している状態」を表すもの。  
+動詞に-ingをつけた形のこと。  
 
-時制とは全く関係がない。  
+主に進行形と他の言葉を説明する形容詞的用法に用いられる。  
+ほか分詞構文的な使い方もされる模様。  
 
-動名詞との見分け方  
-現在分詞→形容詞に変身  
-動名詞→名詞に変身  
+現在とあるが、時制とは全く関係がない。  
+「過去分詞」も、時間とはほとんど関係がない。  
 
-「be動詞 + 現在分詞」が進行形  
+過去であっても現在分詞として「○○していた」的な表現で使われる。  
+
+- 動名詞との見分け方  
+  - 現在分詞 → 形容詞に変身  
+  - 動名詞 → 名詞に変身  
 
 「printing」は動詞「print」の現在分詞。  
 [weblio](https://ejje.weblio.jp/content/printing)  
 
+>現在分詞「動詞＋ing」には、大きく分けて２つの意味があります。  
+>
+>①現在進行形を作る  
+>She is playing the piano now.  
+>（彼女はピアノを弾いている。）  
+>
+>②他のことばを説明する  
+>I saw a dog barking there yesterday.  
+>（私は昨日そこで、吠えている犬を見た。）  
+>
+>[英語の「現在分詞」や「過去分詞」ってなに？英語学習の基礎を徹底解説](https://www.rarejob.com/englishlab/column/20190528/)  
+
+<!--  -->
 >現在分詞形とは動詞に-ingをつけた形のことです。  
 >Doという動詞に-ingをつけるとDoingとなりますね。 これが現在分詞の形です。  
 >
@@ -36,13 +63,66 @@
 >「どんな赤ちゃん？」っていうのを「揺りかごで眠っている赤ちゃん」というように赤ちゃんを詳しく説明していますね。  
 >現在分詞って「現在」って名前が入っていますが、時制とは全く関係がありません。  
 >
->言葉に惑わされずにとりえず名詞を説明するための手段としてVingにしていると思っていただいてOKです。
+>言葉に惑わされずにとりえず名詞を説明するための手段としてVingにしていると思っていただいてOKです。  
 >
 >[現在分詞とは？英語のルールを徹底解説！形容詞的用法の基本](https://www.fuku-eigo.com/grammar/1557#:~:text=%E7%8F%BE%E5%9C%A8%E5%88%86%E8%A9%9E%E5%BD%A2%E3%81%A8%E3%81%AF,%E7%8F%BE%E5%9C%A8%E5%88%86%E8%A9%9E%E3%81%AE%E5%BD%A2%E3%81%A7%E3%81%99%E3%80%82)  
+
+### 動名詞との見分け方
+
+文の中で形容詞として機能しているか名詞として機能しているかを確認する。  
+
+>`The woman talking on the phone looks happy.`  
+>電話で話している女の人、嬉しそう。  
+>
+>この例文ではtalking on the phoneというかたまりは女性を説明してますね。名詞を説明しているんで、この場合はtalkingは現在分詞です。  
+>
+>`Talking on the phone on the train is considered bad manners.`  
+>電車内での通話はマナー違反です。  
+>
+>この例文ではtalking on the phone on the train というかたまりが主語になっています。  
+>主語に入ることができるのは名詞なので、このtalkingは動名詞であることが分かります。  
+>
+><https://www.fuku-eigo.com/grammar/1557#:~:text=%E7%8F%BE%E5%9C%A8%E5%88%86%E8%A9%9E%E5%BD%A2%E3%81%A8%E3%81%AF,%E7%8F%BE%E5%9C%A8%E5%88%86%E8%A9%9E%E3%81%AE%E5%BD%A2%E3%81%A7%E3%81%99%E3%80%82>  
+
+### なぜ現在分詞を学ぶ必要があるのか？
+
+現在分詞を理解しないといけない理由  
+→  
+**文の構造をきちんと把握するため**  
+
+>`The man reading a newspaper in the corner looks sleepy.`
+>
+>もし現在分詞を理解していなくてreadingを進行形のように理解してしまうと`The man reading a newspaper in the corner`までで「その男性はすみっこで新聞を読んでいます」と理解し、その後のlooks sleepyで文の構造が破綻してしまいます。  
 
 [英語の「現在分詞」や「過去分詞」ってなに？英語学習の基礎を徹底解説](https://www.rarejob.com/englishlab/column/20190528/)  
 [英語【分詞】現在分詞と過去分詞を徹底解説！話すための英文法](https://english-club.jp/blog/english-participle/)  
 
 ---
 
+## 分詞構文
+
+現在分詞の用法の一つ。  
+
+分詞構文は、「2つのことが同時に起こっている状況」と「あることが起こっている間に、もう1つのことが起こる状況」を表すことができる。  
+
+>「分詞構文」とは、2つのこと（状態・動作）をまとめて表現するときに使われる「分詞」を使った構文だ。次の例文をみてほしい。  
+>  
+>① He is sitting on a bench **reading** a book.  
+>　(彼は本を読みながらベンチに座っている。)  
+>  
+>「彼がベンチに座っている」と「本を読んでいる」の2つのことを１文で表現している。  
+>
+>上記①は、次の②に言い換えることができる。  
+>
+>② He is sitting on a bench and he is reading a book.  
+>　(彼はベンチに座っており、そして本を読んでいる。)  
+>
+>つまり①は、②の下線の部分「and he is」が省略されていると考えればよい。
+>
+>[英語【分詞構文】※意味や言い換えを基本から発展まで徹底解説](https://english-club.jp/blog/english-participial-construction/)  
+
+---
+
 ## 動名詞
+
+「〜すること」  
