・参考追加 ・疑問検証

--- a/License/LPIC/LPIC1/102/11.ネットワークの基礎/4.DNSの設定.md
+++ b/License/LPIC/LPIC1/102/11.ネットワークの基礎/4.DNSの設定.md
@@ -30,7 +30,7 @@ txt :: テキスト情報
 
 ホスト名とIPアドレスの相互変換→名前解決  
 ホスト名からIPアドレスを求める→正引き  
-IPアドレスカラホスト名を求める→逆引き  
+IPアドレスからホスト名を求める→逆引き  
 
 www.example.com
 www : ホスト名  
