・プルリクエスト ・アップストリームブランチ ・Enumのやつ ・メソッド名

--- a/English/品詞.md
+++ b/English/品詞.md
@@ -125,6 +125,39 @@
 
 ## 動名詞
 
-「〜すること」  
+>英語の動名詞とは動詞をing形にして名詞として使用する用法。  
+>動名詞の特徴｜動詞と名詞の性格を持つ  
+動名詞は主語として使うことができる。  
+動名詞の場合は「～すること（は）」と訳されることが多い。  
+
+[英語の動名詞がよくわかる！混同しがちな「to不定詞」や「現在分詞」との区別も解説！](https://www.rarejob.com/englishlab/column/20221024/)  
+
+---
+
+## 副詞
+
+動詞を修飾する語句  
+
+名詞を修飾する語句は形容詞で、動詞を修飾する語句は副詞。  
+動名詞の場合は、動詞的な性格が影響して、副詞によって修飾される。  
+
+`Speaking English fluently is difficult.（英語を流暢に話すことは難しい。）`  
+
+この例文では、`speaking English（英語を話すこと）`を`fluently（流暢に）`という副詞が修飾しています。  
+
+[英語の動名詞がよくわかる！混同しがちな「to不定詞」や「現在分詞」との区別も解説！](https://www.rarejob.com/englishlab/column/20221024/)  
+
+---
+
+## 補語
+
+補語とは名詞と動詞のみでは文章が成立しない場合、主語を補って文章を完成させる語句のこと。  
+
+`My hobby is playing tennis.（私の趣味はテニスをすることです。）`  
+
+`The purpose of my stay is visiting my friends.（滞在の目的は友達を訪ねることです。）`  
+
+例文ではplaying tennis（テニスをすること）、visiting my friends（友達を訪ねること）の部分がそれぞれの文の補語にあたります。  
+意味で見たときに、「主語=補語」の形になるのが特徴です。  
 
 [英語の動名詞がよくわかる！混同しがちな「to不定詞」や「現在分詞」との区別も解説！](https://www.rarejob.com/englishlab/column/20221024/)  
