--- a/UML/クラス図.md
+++ b/UML/クラス図.md
@@ -235,6 +235,60 @@ class 全体クラス
 }
 ```
 
+[このサイト](https://crieit.net/posts/UML#%E9%9B%86%E7%B4%84)で解説している合成と集約の違い。  
+`管理しているもの`が所持品Zをnewしているので合成っぽいけどそのように解釈されていない。  
+ここまでまとめておいて、追加で記述する必要はないが、クラス図が良く出来たので載せておく。  
+
+``` mermaid
+classDiagram
+direction BT
+
+持っているもの o--> 持たれているモノ  : - 所持品X
+管理しているもの *--> 持たれているモノ  : - 所持品Z
+もう1つの持っているもの o--> 持たれているモノ  : - 所持品Y
+管理しているもの *--> 持っているもの : - 管理対象X
+管理しているもの *--> もう1つの持っているもの  : - 管理対象Y
+
+持っているもの : - 所持品X
+管理しているもの : - 所持品Z
+管理しているもの : - 管理対象X
+管理しているもの : - 管理対象Y
+もう1つの持っているもの : - 所持品Y
+```
+
+``` cs
+class 持たれているもの {
+    // ...
+}
+
+class 持っているもの {
+    private 持たれているもの 所持品X;
+
+    public 持っているもの(持たれているもの 所持品) {
+        所持品X = 所持品;
+    }
+}
+
+class もう1つの持っているもの {
+    private 持たれているもの 所持品Y;
+
+    public もう1つの持っているもの(持たれているもの 所持品) {
+        所持品Y = 所持品;
+    }
+}
+
+class 管理しているもの {
+    private 持っているもの 管理対象X;
+    private もう1つの持っているもの 管理対象Y;
+    private 持たれているもの 所持品Z = new 持たれているもの();
+
+    public 管理しているもの() {
+        管理対象X = new 持っているもの(所持品Z);
+        管理対象Y = new もう1つの持っているもの(所持品Z);
+    }
+}
+```
+
 ---
 
 ## 依存(dependency)
