・整理 ・SQLServerまとめ

--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -29,180 +29,9 @@
 
 ---
 
-## SQL Server のRand関数を用いたテストデータの作成
-
-[SQLで乱数を使ってテストデータを作る](https://nonbiri-dotnet.blogspot.com/2017/04/sql.html)
-
-``` SQL
--- とりあえず5回ループして乱数を生成するサンプル
-DECLARE @counter smallint
-SET @counter = 0
-
-WHILE @counter < 5
-BEGIN
-    SELECT rand() * 100
-    SET @counter = @counter + 1
-END
-```
-
----
-
-## FLOOR関数とCEILING関数
-
-Y君から、「これ何したいかわかります？」って質問されたが、そもそも関数が何やるかわからなかったのでまとめる。  
-
-``` SQL
-    CEILING(FLOOR(金額 * 10) / 10)
-```
-
-- FLOOR : 床→切り下げ  
-- CEILING : 天井→切り上げ  
-
-なるほど。言葉の意味そのままなのね。  
-因みにROUNDは四捨五入ね。
-
-``` txt : 金額が「112.23」と来た場合
-デフォ  →  112.23
-*10     →  1122.3
-FLOOR   →  1122  
-/10     →  112.2 
-CEILING →  113   
-```
-
-普通に112.23の地点でCEILING使えばよくね？ってなるよね。  
-修正の履歴を見る限り、過去の修正を生かしつつ、辻褄を合わせるためにこうなったのだろうという結論で終結した。  
-
----
-
-## Identityの発番テーブルで保存時に発番した値を取得する
-
-`OUTPUT句`なるものがあるらしい。  
-部長が知ってた。  
-
-T-SQLに分類されるっぽいのでSQLServer独自の構文。  
-
-INSERT、UPDATE、DELETE、MERGE ステートメントで影響を受けたレコードを取得することができる。  
-それぞれで書き方が微妙に違う。  
-実務では自動発番されたIDENTITYの値を取得するために使用していた。  
-
-INSERTの場合はINTO句とVALUE句の間に `OUTPUT inserted.フィールド,inserted.フィールド,...`を記述することで指定した列の挿入した値を取得できる模様。  
-SQLで使う場合はテーブル変数を用意してそれにINTOすることで複数の結果を取得可能。  
-
-``` sql
--- テーブル変数を定義
-DECLARE @StudentInserted TABLE (
-   StudentID INT,
-   FirstName VARCHAR(50),
-   LastName VARCHAR(50)
-);
-
--- INSERTとOUTPUTの実行
-INSERT INTO Student
-   (FirstName, LastName, Gender)
-OUTPUT 
-   inserted.StudentID, 
-   inserted.FirstName, 
-   inserted.LastName
-INTO @StudentInserted (
-   StudentID,
-   FirstName,
-   LastName
-)
-VALUES 
-   ('Rin', 'Yokota', 'M'),
-   ('Hina', 'Yokota', 'F');
-
--- 結果を表示
-SELECT *
-FROM @StudentInserted;
-```
-
-Dapperで使う場合はINTO句は必要なく、戻り値として受け取ることができる模様。  
-
-``` C#
-    // [SeqNo]という[Identity]フィールドがある[Table]
-    var query = new StringBuilder()
-        .AppendLine("INSERT INTO [Table] (")
-        .AppendLine("   [Id],")
-        .AppendLine("   [Name]")
-        .AppendLine(")")
-        .AppendLine("OUTPUT inserted.[SeqNo]")
-        .AppendLine("VALUES (")
-        .AppendLine("@Id,")
-        .AppendLine("@Name")
-        .AppendLine(")");
-    // クエリ実行
-    var identity = _DapperAction.GetFirstDataByQuery<long>(
-        ConnectionTypes.SystemWithOutTransactionScope, 
-        query.ToString(), 
-        data
-    );
-```
-
-[SQL Server - OUTPUT 句の使い方](https://sql55.com/query/sql-server-output-clause.php)  
-
-OUTPUT句で出力する以外ではこういうものもあるらしい。  
-`var id = rnWebConnection.QueryFirstOrDefault<long>("SELECT LAST_INSERT_ID()");`  
-
-もしかしたら結果が1つだけなら変数受けすることもできるかもしれないと思ったが駄目だった。  
-
-``` sql
-DECLARE @Test INT
-set @Test = (INSERT INTO [Table] (TestID,TestName) OUTPUT inserted.TestID VALUES (1,'Test'));
-SELECT @Test;
-```
-
----
-
 ## DISTINCTとワイルドカードの併用
 
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkでは実行速度が遅くなるらしい  
-
----
-
-## TOP 句 PERCENT
-
-[SqlServerの SELECT TOP 100 PERCENT で作成したビューの並び順は『保証されない』](https://culage.hatenablog.com/entry/20170824/p1)  
-[TOP 句 PERCENT](https://haradago.hatenadiary.org/entry/20180214/p1)  
-
-TOPにPERCENT句を付けると上位N%のデータを取得することができる  
-
-``` sql
-select TOP 50 PERCENT * FROM TastTeble
-
---  100 : 90121件
---   50 : 45061件
---    1 :   902件
--- -100 : '-' 付近に不適切な構文があります。
--- 5000 : パーセント値は 0 から 100 までの値を指定してください。
-```
-
-### TOP 100 PERCENTをやる意味とは？
-
-ビューを呼び出したときに最初からソートされているとありがたい。  
-ビューを取得してから改めてOrderByする手間は省きたい。  
-そういう訳で、それを実現するためのテクニックとして、この方法が用いられてきたみたいだが、Microsoft的には、この動作は意図した動作ではなかったので非推奨になったらしい。  
-というわけで、今はほとんど意味がないんだとか。  
-
-実務で使っていたのは、全てのデータを取得するメソッドで並び替えまで済ませ、そのあとで必要なフィールドだけを抽出する動作を実現したかったからだと思われる。  
-完全なビューとして運用するわけではないので、この方法が有効だったのかもしれない。  
-疑似的なビューとしてこの方法を用いた可能性がある。  
-
-[Road to DBD](https://plaza.rakuten.co.jp/jamshid/diary/200805080000/)  
->Viewやテーブル関数にTOP 100 PERCENTを指定すると、ORDER BYが切れるようになるというのは、SQL Server 2000時代でもある意味Tipsとして通用していたと思うが、SQL Server 2005ではこれが使えなくなったのだった。  
->「TOP 100 PERCENTであれば、全件を返すわけだから、オプティマイザは並べ替えを行わない」という変更が行われた。  
-
-[ビューのソートについて](https://oshiete.goo.ne.jp/qa/4420769.html)  
->ビューを単純に照会したときにORDER句を切らなくても希望する並び順でSELECTできれば、運用上は便利なことが多いです。  
->そのため、SQL Serverでは昔からTipsでTOP 100 PERCENTで並び替える方法が認識されていました。  
->（Tipsとある通り、普通はViewの外でOrder切ります）  
->ただし、SQL Server 2005になって、TOP 100 PERCENTは「並び替えの必要なし」とオプティマイザが判断するように仕様が変更されてしまいました。  
->そのため、SQL Server 2005ではTOP 100 PERCENT句をViewに切っても並び替えは起こりません。  
->それだけなら分かりやすいのですが、やはりこの技を使っていた人が多かったためでしょうか。  
->SP2の後の累積パッチ「SP2の累積プログラムその２」でこれを修正するモジュールが提供されています。  
->SP2には入っていないし、わざわざ当てる人も少ないと思うので、次のSP3が出たとして、それ当てた時からTOP 100 PERCENTが効くようになるでしょう。  
->ちなみにSQL Server 2008でも初期バージョンではTOP 100 PERCENTが効かず、累積パッチが提供されています。  
->ということで、そのようなビューの使い方は正しいアプローチではありませんが、SQL Serverの裏ワザの一つですと認識ください。  
 
 ---
 
@@ -325,30 +154,6 @@ ORDER BY s.[name], o.[name], i.index_id
 [Microsoft SQL Server: エラー: 909 データベースを SQL Server 2008 の SQL Server Enterprise Edition から任意の下位エディションに移行中に発生する](http://www.thesqlpost.com/2012/06/microsoft-sql-server-error-909-while.html)  
 [SQL Server 2008 R2 で新しい (ContosoRetailDW) を作成するときのエラー 909。エラー 909 を受け取り、](https://social.msdn.microsoft.com/Forums/en-US/0057feb1-2034-448c-a9ea-c66484b048ba/error-909-when-creating-new-contosoretaildw-on-sql-server-2008-r2-receiving-error-909?forum=sqlgetstarted)  
 [Enterprise Edition の DB バックアップを Standard Edition にリストア](https://blog.engineer-memo.com/2014/12/24/enterprise-edition-%E3%81%AE-db-%E3%83%90%E3%83%83%E3%82%AF%E3%82%A2%E3%83%83%E3%83%97%E3%82%92-standard-edition-%E3%81%AB%E3%83%AA%E3%82%B9%E3%83%88%E3%82%A2/)  
-
----
-
-## FORMAT関数
-
-FORMAT関数が使えるのは2012から。  
-2008R2では分析ツール用のクエリでは使えるが、組み込み関数としては使えない。  
-
-[SQLServerのFORMAT関数にハマったのでメモ (2008 R2では使えない)](https://devlights.hatenablog.com/entry/2015/03/09/143355)  
-
----
-
-## テーブルを複製する方法
-
-``` sql
-SELECT * INTO コピー先テーブル名 FROM コピー元テーブル名
-```
-
-`コピー元テーブル名`は名前の指定だけあればよい。  
-あらかじめテーブルを作成する必要は無し。  
-実行するとテーブルもSQLServerが自動でテーブルも作成してくれます。  
-※注：ただし、テーブルは規定の領域（なにも設定してなければPrimary）に作られるので、ファイルグループ管理は要注意。  
-
-[[SQLServer]テーブルをまるっとコピーする方法](https://ameblo.jp/nature3298type-s/entry-10313449987.html)
 
 ---
 
@@ -557,3 +362,22 @@ RETURNはストアドでしか使えない。
 検索文字列 : sqlserver t-sql 途中終了  
 
 [T-SQL STOP or ABORT command in SQL Server](https://stackoverflow.com/questions/2028072/t-sql-stop-or-abort-command-in-sql-server)  
+
+---
+
+## クラスター化インデックスと非クラスター化インデックス
+
+[SQL Server/SQL Database再入門 第2回 Index SeekとIndex Scan](https://qiita.com/yyukawa/items/4cc1cd5e447b5a5d1b48)  
+
+[【SQL】ゼロ知識から実行計画を読み解きパフォーマンス改善](https://qiita.com/yoshinori_hisakawa/items/5ef0cf4fd8eb6dd3037f)  
+[【SQL】ゼロ知識からSQLのパフォーマンスを考えられるようになるまで](https://qiita.com/yoshinori_hisakawa/items/f5d608d302ede8f9883d)  
+
+実行計画の見方  
+[use-the-index-luke](https://use-the-index-luke.com/ja/sql/explain-plan/sql-server/operations)  
+
+>主キー列(PRIMARY KEY 制約を設定した列)には、デフォルトで「クラスター化インデックス」という種類のインデックスが作成されます。  
+>Clustered Index Scan はテーブルスキャンと同等の内部動作  
+
+Table Scan : テーブル全体の検索  
+Clustered Index Scan : テーブルスキャンと同等の内部動作  
+Clustered Index Seek : クラスター化インデックスでの一意検索(ピンポイント検索)や部分的なスキャンを意味する。  
