--- a/DB/DB設計/正規化.md
+++ b/DB/DB設計/正規化.md
@@ -1,18 +1,21 @@
 # 正規化
 
-[うさぎでもわかる](https://www.momoyama-usagi.com/entry/info-database-seikika)  
-[[DataBase]で行う正規化の手順についてわかりやすく解説します](https://rikulogger.com/db/nomalization/)
+## 正規化とは？
 
-データとかを使いやすいように整理したり変形したりすること  
+データとかを使いやすいように整理したり変形したりすること。  
 正規化の目的は冗長性の排除することで更新時異状を回避し、データベースの一貫性を確保すること。  
 DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計レベル」で防ぐこと。  
 正規化はパフォーマンス向上のために行うわけではない。  
+
+[うさぎでもわかる](https://www.momoyama-usagi.com/entry/info-database-seikika)  
+[[DataBase]で行う正規化の手順についてわかりやすく解説します](https://rikulogger.com/db/nomalization/)
 
 ---
 
 ## 第1正規形
 
-→同一行内に置ける重複の排除  
+同一行内に置ける重複の排除  
+
 ポイント：レコードの繰り返し項目を別のレコードへと分割する  
 
 パッと見DBに格納できる状態ではあるが、重複しまくっているので使い物にはならない状態。  
@@ -21,7 +24,8 @@ DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計
 
 ## 第2正規形
 
-→部分関数従属の排除。  
+部分関数従属の排除  
+
 複合主キーの部分キーによって一意に定まる属性を別表に移したもの。  
 主キーに部分従属している属性を分離したもの。  
 ポイント：テーブルの主キーに着目し、その項目に関数従属する非キー項目を見つける。  
@@ -34,7 +38,8 @@ DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計
 
 ## 第3正規形
 
-→推移的関数従属の排除。  
+推移的関数従属の排除  
+
 主キー又は主キーの一部に推移的に関数従属する属性を別表に移します。  
 どのテーブルであってもすべての属性が主キーに対して完全従属であるテーブルにします。  
 `a→b→{f，g，h}、受注番号→顧客コード→顧客名`  
@@ -67,3 +72,16 @@ DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計
 第1正規形：レコードの繰り返し項目を別レコードへと分割する。  
 第2正規形：テーブルの主キーに着目して、関数従属する非キー項目を見つける。  
 第3正規形：テーブルの非キーに着目して、関数従属する項目を見つける。  
+
+---
+
+## 複合主キー(自然キー) vs. 人工キー
+
+実際の開発では、3つ以上の項目から構成される複合主キーが存在することは珍しくない。  
+しかし、主キーを構成する項目が多くなると、SQLステートメントやプログラム記述が複雑になる。  
+これを回避するために、人工的な主キー(識別子)を追加することもある。  
+
+人工的な主キーは、「人工キー」「人為キー」「サロゲートキー(代理キー)」とも呼ばれる。  
+元々の主キーは「自然キー」(Natural Key)と呼ばれることもある。(人工に対して自然な主キーという意味)。  
+全ての状況において、人工キーの追加を進めるわけではないが、人工キーを追加したほうが開発/保守しやすい場合は、追加すべし。  
+[SQLServer 2016の教科書より]  
