・SQLServerまとめ中 ・Azure DevOps

--- a/DB/SQLServer/トランザクション/トランザクション.md
+++ b/DB/SQLServer/トランザクション/トランザクション.md
@@ -1,5 +1,71 @@
 # トランザクションメモ
 
+`TRANSACTION`は`TRAN`と省略可能。  
+
+`COMMIT TRAN`は`TRAN`を省略して`COMMIT`と記述可能。  
+`ROLLBACK TRAN`も`ROLLBACK`と記述可能。  
+
+`BEGIN TRAN`の`TRAN`は省略不可。  
+
+---
+
+## 明示的 vs 暗黙的トランザクション
+
+SQLServerはBEGIN TRANSACTIONステートメントによる明示的な開始を宣言する「明示的なトランザクション」。  
+OracleやDB2のように、自動的にトランザクションが開始されるトランザクションは「暗黙的なトランザクション」(Implicit Transaction)と呼ばれる。  
+
+SQLServerで暗黙的なトランザクションとして動作させる場合、次のSETステートメントを実行する。  
+
+`SET IMPLICIT_TRANSACTIONS ON`  
+
+この設定(暗黙的なトランザクションが有効な状態)は、SQLServerに接続している間、または設定をOFFへ変更するまで続く。  
+
+---
+
+## ネストしたトランザクション
+
+トランザクションは、トランザクションの中でさらにトランザクションを定義することも可能。  
+ただし、この場合はネストしたトランザクション側でROLLBACK TRANが実行されると、当該トランザクションだけではなく、トランザクション全体がロールバックされてしまう。  
+
+``` sql
+BEGIN TRAN
+    -- do something
+    BEGIN TRAN
+        -- do something
+    ROLLBACK TRAN -- ←ROLLBACKが実行されるとトランザクション全体がロールバックされる。
+COMMIT TRAN
+```
+
+---
+
+## ロールバックされない処理
+
+トランザクションは不慮の障害(停電やCPU障害、メモリ障害など)が発生した場合にロールバックを行ってくれるが、制約違反エラー等のステートメントエラーが発生した場合には、ロールバックを行ってくれない。  
+
+`SET XACT_ABORT ON`を追加するか、例外処理を追加する。  
+
+---
+
+## SET XACT_ABORT ON
+
+ステートメントエラー時のトランザクションのロールバックを有効化するオプション。  
+規定ではOFFになっている。  
+ONにした後はOFFを実行するか、接続が切れるまで有効。  
+
+XACTはTransactionの略。  
+Abortは「中止」「中断」の意味。  
+
+``` sql
+SET XACT_ABORT ON
+BEGIN TRAN
+    INSERT INTO t VALUES(1,111)
+    INSERT INTO t VALUES(1,111)-- 重複値の追加。制約違反エラー
+COMMIT TRAN
+SET XACT_ABORT OFF
+```
+
+---
+
 ## TransactionはTryの前で行うべきか後に行うべきか
 
 昔、Tryの前にTransactionを実行してエラーとなり、トランザクションが開いたままになった記憶がある。  
@@ -39,3 +105,13 @@ END CATCH
 多分そうだと思う。  
 
 [TSQL Try / Catch within Transaction or vice versa?](https://stackoverflow.com/questions/23056973/tsql-try-catch-within-transaction-or-vice-versa)  
+
+---
+
+## MSDTC (Microsoft Distributed Transaction Cordinator)
+
+>分散トランザクション (Distributed Transaction) は、複数サーバーにまたがったトランザクションのことで、この調整 (Coordinate) を行うための機能がMSDTCサービスです。  
+>[SQLServer2016の教科書]  
+
+TransactionScopeを使うとこの仕組みを使う模様。  
+Linuxでは対応していないので、SQLServerをLinuxにもっていって、TransactionScopeを使うと死ぬ模様。  
