・sqlserverまとめ中

--- a/DB/SQLServer/デッドロック/デッドロック.md
+++ b/DB/SQLServer/デッドロック/デッドロック.md
@@ -12,26 +12,30 @@
 
 ## SQL Server のデッドロック対応
 
-[【SQL server】デッドロックの調査方法](https://memorandom-nishi.hatenablog.jp/entry/2016/11/14/024856)  
-[SQL Server 2012 のデッドロック情報の取得について](https://blog.engineer-memo.com/2012/04/19/sql-server-2012-%E3%81%AE%E3%83%87%E3%83%83%E3%83%89%E3%83%AD%E3%83%83%E3%82%AF%E6%83%85%E5%A0%B1%E3%81%AE%E5%8F%96%E5%BE%97%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6/)  
-
 1. [サーバー] → [管理] → [拡張イベント] → [セッション] → [system_health] → [package0.event_file] をダブルクリック  
 2. 上の欄から対象のデッドロックを選択  
-3. 下の欄の[詳細][デッドロック]タブからデッドロックの情報を確認可能。
+3. 下の欄の [詳細] [デッドロック] タブからデッドロックの情報を確認可能。  
 
-※[system_health] と同じ階層にある[ロックレポート]でもそれなりの情報を確認可能。
+※[system_health] と同じ階層にある[ロックレポート]でもそれなりの情報を確認可能。  
 
 デッドロックが発生した際に実行されるクエリに関しては、[詳細] タブの [xml_report] をダブルクリックして展開するか、[デッドロック] のタブでポイントを置いた状態にすることで確認することができます。  
 
-### デッドロックグラフをファイルとして保存する方法
+[【SQL server】デッドロックの調査方法](https://memorandom-nishi.hatenablog.jp/entry/2016/11/14/024856)  
+[SQL Server 2012 のデッドロック情報の取得について](https://blog.engineer-memo.com/2012/04/19/sql-server-2012-%E3%81%AE%E3%83%87%E3%83%83%E3%83%89%E3%83%AD%E3%83%83%E3%82%AF%E6%83%85%E5%A0%B1%E3%81%AE%E5%8F%96%E5%BE%97%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6/)  
 
-[System Health のデッドロック情報からデッドロックグラフを作成する](https://blog.engineer-memo.com/2013/06/21/system-health-%E3%81%AE%E3%83%87%E3%83%83%E3%83%89%E3%83%AD%E3%83%83%E3%82%AF%E6%83%85%E5%A0%B1%E3%81%8B%E3%82%89%E3%83%87%E3%83%83%E3%83%89%E3%83%AD%E3%83%83%E3%82%AF%E3%82%B0%E3%83%A9%E3%83%95/)  
+---
+
+## デッドロックグラフをファイルとして保存する方法
 
 1. [system_health] → [package0.event_file] → [詳細]タブ → [xml_reort]をダブルクリックしてxmlを表示  
 2. 表示されたXMLを`<deadlock-list></deadlock-list>` タグで囲って `.xdl` 拡張子で保存  
 3. 保存したファイルをダブルクリックで開いたり、ManagementStudioにドラッグすることでデッドロックグラフが表示される  
 
-### dm_exec_sql_textの情報表示
+[System Health のデッドロック情報からデッドロックグラフを作成する](https://blog.engineer-memo.com/2013/06/21/system-health-%E3%81%AE%E3%83%87%E3%83%83%E3%83%89%E3%83%AD%E3%83%83%E3%82%AF%E6%83%85%E5%A0%B1%E3%81%8B%E3%82%89%E3%83%87%E3%83%83%E3%83%89%E3%83%AD%E3%83%83%E3%82%AF%E3%82%B0%E3%83%A9%E3%83%95/)  
+
+---
+
+## dm_exec_sql_textの情報表示
 
 [xml_reortレコード]をダブルクリックして表示されるxml中の `sqlhandle="0x02000000~~~~~"` みたいなやつを取得して以下のselect文を実行すると以下のような情報を表示することができる。  
 
@@ -45,7 +49,9 @@ SELECT * FROM sys.dm_exec_sql_text(0x01000600B74C2A1300D2582A2100000000000000000
 
 [sys.dm_exec_sql_text (Transact-SQL)](https://docs.microsoft.com/ja-jp/sql/relational-databases/system-dynamic-management-views/sys-dm-exec-sql-text-transact-sql?view=sql-server-ver15)
 
-### 他参考リンク集
+---
+
+## 他参考リンク集
 
 [SQLServer: with(nolock)ヒントでロックを確実に回避できるという認識は間違い](https://qiita.com/maaaaaaaa/items/209a681f0a771cf80df4)  
 [SQL Serverのwith(NOLOCK)の挙動について](https://tech.excite.co.jp/entry/2021/05/22/120000)  
