--- a/DB/SQLServer/デッドロック/意図的にデッドロックを発生させる.md
+++ b/DB/SQLServer/デッドロック/意図的にデッドロックを発生させる.md
@@ -1,11 +1,6 @@
 # 意図的にデッドロックを発生させるサンプル
 
-[Oracle DBでDEAD LOCKをさくっと発生させる](https://tomoima525.hatenablog.com/entry/2013/12/19/201157)  
-[デッドロックについて説明してみる - その 2 ( C# で deadlock を例外処理でキャッチしてみる ) -](https://ryuchan.hatenablog.com/entry/2016/10/16/173225)  
-
----
-
-## クライアントで発生させる場合
+## マネジメントスタジオで発生させる場合
 
 まず適当なデータベース作って、テーブルとデータを用意する。  
 
@@ -340,3 +335,8 @@ Database1というローカルDB作って、プログラムを流せば発生す
         }
     }
 ```
+
+---
+
+[Oracle DBでDEAD LOCKをさくっと発生させる](https://tomoima525.hatenablog.com/entry/2013/12/19/201157)  
+[デッドロックについて説明してみる - その 2 ( C# で deadlock を例外処理でキャッチしてみる ) -](https://ryuchan.hatenablog.com/entry/2016/10/16/173225)  
