--- a/DB/SQLServer/トランザクション/トランザクション.md
+++ b/DB/SQLServer/トランザクション/トランザクション.md
@@ -1,10 +1,23 @@
-# トランザクションメモ
+# トランザクション
+
+## 基本
+
+``` sql
+BEGIN TRANSACTION
+COMMIT TRANSACTION
+ROLLBACK TRANSACTION
+```
+
+``` sql
+BEGIN TRAN
+COMMIT
+ROLLBACK
+```
 
 `TRANSACTION`は`TRAN`と省略可能。  
 
 `COMMIT TRAN`は`TRAN`を省略して`COMMIT`と記述可能。  
 `ROLLBACK TRAN`も`ROLLBACK`と記述可能。  
-
 `BEGIN TRAN`の`TRAN`は省略不可。  
 
 ---
