--- a/C#_WPF/XAML/メモ.md
+++ b/C#_WPF/XAML/メモ.md
@@ -1,25 +1,4 @@
-# XAMLまとめ
-
----
-
-## 参考リンク集
-
-[WPFのソースコード](https://github.com/dotnet/wpf)  
-[コントロールのスタイルとテンプレート](http://msdn.microsoft.com/ja-jp/library/aa970773(v=vs.110).aspx)  
-[WPFのコントロール一覧](https://water2litter.net/rye/post/c_control_list/#my_mokuji10)  
-
-[kazuki_WPF入門](https://blog.okazuki.jp/entry/2014/12/27/200015)  
-[WPF4.5入門](https://www.slideshare.net/okazuki0130/wpf45-38048141)  
-
-[DataGridView編メニュー](https://dobon.net/vb/dotnet/datagridview/)  
-[Windows Presentation Foundation実践](http://kisuke0303.sakura.ne.jp/blog/wordpress/wp-content/uploads/2016/08/4843696230c1698ad8ff7d086b998344.pdf)
-
-[[C# WPF] なんとかしてWPFの描画を速くしたい「Canvas.Childrenへのオブジェクト追加」](https://www.peliphilo.net/archives/2390)
-[WPF で ENTER キーを押したらフォーカス移動するようにする](https://rksoftware.wordpress.com/2016/05/04/001-14/)
-
-[【WPF】【MVVM】GUIのマウス/キー操作処理をコードビハインドから駆逐する](https://qiita.com/hotelmoskva_/items/13ecc724bdad00078c16)  
-[ダブルクリックイベントを持っていないコントロールで判定を拾う](https://www.hos.co.jp/blog/20200331/)  
-[WPFのRelativeSourceのはなし](https://hidari-lab.hatenablog.com/entry/wpf_relativesource_self_and_findancestor)  
+# XAMLメモ
 
 ---
 
@@ -370,7 +349,7 @@ StaticResourceを使いたかったらApp.xamlの`<Application.Resources>`要素
 
 ---
 
-## 
+## Enterで任意のコントロールにフォーカスさせる
 
 [【C#/WPF】EventTriggerを使って、Buttonでなくてもクリック時のCommandをかけるようにする](https://qiita.com/tera1707/items/7ecde6e97a19437cbf72)
 
@@ -588,3 +567,22 @@ ContextMenuからFindAncestorがうまく行かない。
 [【WPF】ContextMenuからFindAncestorする方法](https://threeshark3.com/contextmenu-findancestor/)  
 
 ---
+
+## 参考リンク集
+
+[WPFのソースコード](https://github.com/dotnet/wpf)  
+[コントロールのスタイルとテンプレート](http://msdn.microsoft.com/ja-jp/library/aa970773(v=vs.110).aspx)  
+[WPFのコントロール一覧](https://water2litter.net/rye/post/c_control_list/#my_mokuji10)  
+
+[kazuki_WPF入門](https://blog.okazuki.jp/entry/2014/12/27/200015)  
+[WPF4.5入門](https://www.slideshare.net/okazuki0130/wpf45-38048141)  
+
+[DataGridView編メニュー](https://dobon.net/vb/dotnet/datagridview/)  
+[Windows Presentation Foundation実践](http://kisuke0303.sakura.ne.jp/blog/wordpress/wp-content/uploads/2016/08/4843696230c1698ad8ff7d086b998344.pdf)
+
+[[C# WPF] なんとかしてWPFの描画を速くしたい「Canvas.Childrenへのオブジェクト追加」](https://www.peliphilo.net/archives/2390)
+[WPF で ENTER キーを押したらフォーカス移動するようにする](https://rksoftware.wordpress.com/2016/05/04/001-14/)
+
+[【WPF】【MVVM】GUIのマウス/キー操作処理をコードビハインドから駆逐する](https://qiita.com/hotelmoskva_/items/13ecc724bdad00078c16)  
+[ダブルクリックイベントを持っていないコントロールで判定を拾う](https://www.hos.co.jp/blog/20200331/)  
+[WPFのRelativeSourceのはなし](https://hidari-lab.hatenablog.com/entry/wpf_relativesource_self_and_findancestor)  
