--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -44,6 +44,56 @@ IFTTTで、設定したメールアドレスに対する特定のメールの受
 sql where 仕組み
 [SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
 
+---
+
+## LEFT RIGHT
+
+``` sql
+-- これと
+select
+    *
+from
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    LEFT OUTER JOIN dbo.宿泊先
+    ON  dbo.予約.宿泊先CD = dbo.宿泊先.宿泊先CD
+    ON  dbo.料金.料金CD = dbo.予約.料金CD
+
+-- これは同じ
+select 
+    * 
+from
+    dbo.料金
+    RIGHT OUTER JOIN dbo.予約
+    ON  dbo.料金.料金CD = dbo.予約.料金CD
+    LEFT OUTER JOIN dbo.宿泊先
+    ON  dbo.予約.宿泊先CD = dbo.宿泊先.宿泊先CD
+
+-- 全部LEFTに置き換え
+select
+    * 
+from
+    dbo.予約
+    LEFT OUTER JOIN dbo.料金
+    ON  dbo.予約.料金CD = dbo.料金.料金CD
+    LEFT OUTER JOIN dbo.宿泊先
+    ON  dbo.予約.宿泊先CD = dbo.宿泊先.宿泊先CD
+
+
+-- これはだめ
+select
+    * 
+from
+    dbo.予約
+    LEFT OUTER JOIN dbo.料金
+    LEFT OUTER JOIN dbo.宿泊先
+    -- マルチパート識別子"dbo.予約.料金CD"をバインドできませんでした。
+    ON  dbo.料金.料金CD = dbo.予約.料金CD
+    ON  dbo.予約.宿泊先CD = dbo.宿泊先.宿泊先CD
+```
+
+SELECT *
+FROM oya
 LEFT OUTER JOIN A
 RIGHT OUTER JOIN B
 ON A.aa = B.aa
@@ -484,4 +534,24 @@ C4Context
     UpdateRelStyle(SystemC, customerA, $textColor="red", $lineColor="red", $offsetX="-50", $offsetY="20")
 
     UpdateLayoutConfig($c4ShapeInRow="3", $c4BoundaryInRow="1")
+```
+
+``` cs
+//coalesce式
+
+// これは
+var timeTypeCDCondition = timeTypeCD.HasValue ? timeTypeCD.Value : 1;
+// こう置き換えられる。で、これはcoalesce式というらしい。
+var aa = timeTypeCD ?? 1;
+```
+
+``` cs
+void Create()
+{
+    Set(
+        Get().Convert(),
+        Get().Convert(),
+        Get().Convert()
+    );
+}
 ```
