・整理 ・文字列連結sql整理 ・sqlserver2016の教科書まとめ

--- a/DB/SQLServer/デッドロック/デッドロック.md
+++ b/DB/SQLServer/デッドロック/デッドロック.md
@@ -10,7 +10,51 @@
 
 ---
 
-## SQL Server のデッドロック対応
+## SQLServerのデッドロックの仕様
+
+SQLServerではデッドロックの定期的な監視を5秒ごとに行っている。  
+
+デッドロックを検出した場合、どちらかのトランザクションをロールバックする。  
+そうすることで、永遠にロックを待ち続けるという状況を回避している。  
+この時、取り消されたトランザクション側にはエラー「1205」が送信される。  
+
+``` txt
+メッセージ 1205 レベル13、状態51、行12
+トランザクション(プロセスID ○○)がロック 個のリソースで他のプロセスとデッドロックして、個のトランザクションがそのデッドロックの対象となりました。トランザクションを再実行してください。
+```
+
+---
+
+## Oracleのデッドロック時の動作
+
+SQLServerではデッドロック検出時に、トランザクション全体がロールバックされるのに対して、Oracleでは、当該ステートメントのみしかロールバックされない。  
+Oracleでトランザクション全体をロールバックさせるためには、別途コードを記述する必要がある。  
+
+---
+
+## デッドロックの監視
+
+デッドロックの監視には、トレースフラグ「1222」を利用する事ができる。  
+トレースフラグを有効にするのは`DBCC TRACEON`コマンドを実行する。  
+
+``` sql
+DBCC TRACEON(1222,-1)
+```
+
+この設定は、SQLServerを停止するまで、または`DBCC TRACEOFF`コマンドを実行するまで有効。  
+トレースフラグ1222を有効化すると、デッドロックの発生時にSQLServerのログへその時の状況(実行されていたステートメント等)を記録できるようになる。  
+
+### 表示のしかた
+
+[サーバー] → [管理] → [SQLServerログ] → ログファイルを選択して表示する。  
+
+ログの中で`deadlock-list`と表示されたところからデッドロックに関する周辺情報が記録され、`process~~`で始まる行にデッドロック発生時に実際に実行されていた接続(プロセス)に関する情報が記録されている。  
+
+トレースフラグ1222を利用することで、デッドロック発生時の状況をSQLServerログに残すことができるようになる。  
+
+---
+
+## デッドロックの確認
 
 1. [サーバー] → [管理] → [拡張イベント] → [セッション] → [system_health] → [package0.event_file] をダブルクリック  
 2. 上の欄から対象のデッドロックを選択  
@@ -51,7 +95,7 @@ SELECT * FROM sys.dm_exec_sql_text(0x01000600B74C2A1300D2582A2100000000000000000
 
 ---
 
-## 他参考リンク集
+## 参考リンク
 
 [SQLServer: with(nolock)ヒントでロックを確実に回避できるという認識は間違い](https://qiita.com/maaaaaaaa/items/209a681f0a771cf80df4)  
 [SQL Serverのwith(NOLOCK)の挙動について](https://tech.excite.co.jp/entry/2021/05/22/120000)  
