--- a/DB/SQLServer/トランザクションとエラー/トランザクション.md
+++ b/DB/SQLServer/トランザクションとエラー/トランザクション.md
@@ -2,6 +2,15 @@
 
 ## 基本
 
+トランザクションは、データベースシステムにおける処理の単位。  
+トランザクションの完了はコミット。  
+トランザクションの取り消しはロールバック。  
+
+SQLServerでは次の2つをトランザクションとして扱う。  
+
+- UPDATE/INSERT/DELETEなどのデータ更新系のステートメント  
+- BEGIN TRANSACTION から COMMIT TRANSACTION で挟まれた複数のステートメント  
+
 ``` sql
 BEGIN TRANSACTION
 COMMIT TRANSACTION
