--- a/DB/SQLServer/メモ.md
+++ b/DB/SQLServer/メモ.md
@@ -4,17 +4,22 @@
 
 ---
 
-## null許可のフィールドを追加→変更の保存が許可されていません
+## 変更の保存が許可されていません
 
-フィールドを追加する際にたまに発生するので備忘録として残しておく。  
-発生原因としてはテーブルの監視履歴が削除されてしまうからだそうです。  
+null許可のフィールドを追加した時に発生。  
 
-1. [ツール] メニューの [オプション] をクリックします。  
-2. [オプション] ウィンドウのナビゲーション ウィンドウ で 、[デザイナー] をクリックします。  
-3. [テーブルの再作成を必要とする変更の保存を防止する] チェックボックスをオンまたはオフにし 、[OK] をクリックします。  
+- 対処法  
+  1. [ツール] メニューの [オプション] をクリック。  
+  2. [オプション] ウィンドウのナビゲーション ウィンドウ で 、[デザイナー] をクリック。  
+  3. [テーブルの再作成を必要とする変更の保存を防止する] チェックボックスをオンまたはオフにし 、[OK] をクリック。  
+
+SQLServer2008から「NULL/NOT NULLの設定を変更」、「列の順序を変更」、「データ型を変更」、「既存の列の前に新しい列の追加」を行った場合にこのエラーが発生するようになった。(2005以前は発生しない)  
+
+例えば、「社員番号」列が「NULL」へ設定されている場合に、PRIMARY KEY制約を設定しようとすると、PRIMARY KEY制約は暗黙的にNOT NULLへ設定変更を行うため、このエラーが発生する。  
+
+他にも、「発生原因としてはテーブルの監視履歴が削除されてしまうから」とか。  
 
 [SQL Server カラム定義を変更すると「変更の保存が許可されていません」が表示された場合の対処法](https://nasunoblog.blogspot.com/2013/10/sql-server-column-edit-error.html)  
-
 [変更の保存は、エラー メッセージで許可SSMS](https://docs.microsoft.com/ja-jp/troubleshoot/sql/ssms/error-when-you-save-table)  
 
 ---
