--- a/ディレクトリ構成図記号.md
+++ b/ディレクトリ構成図記号.md
@@ -19,3 +19,14 @@
 ```
 
 [ディレクトリ構成図を書くときに便利な記号](https://qiita.com/paty-fakename/items/c82ed27b4070feeceff6)
+
+---
+
+``` txt
++---------+---------+
+| Column1 | Column2 |
++---------+---------+
+| aa      | 11      |
+| bb      | 22      |
++---------+---------+
+```
