--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -41,7 +41,21 @@ IFTTTで、設定したメールアドレスに対する特定のメールの受
 
 ---
 
-sql where 仕組み
+## sql where 仕組み
+
+SELECT文の内部的な処理の基本は、テーブルの各行に対する繰り返し処理  
+プログラミングでいうところのfor文。  
+
+SELECT文の処理は2つに分けられる。  
+
+- テーブルを1行ずつ処理する。  
+- テーブル内の複数の行を集約する。  
+
+2つのうち、どちらの処理が行われるかは以下で判断できる。  
+
+- SELECT句で集約関数を使わない場合、テーブルは1行ずつ処理される。  
+- SELECT句で集約関数を1つでも使った場合、テーブル内の複数の行で集約が行われる。  
+
 [SELECT文の処理の仕組みを説明してみた。](https://nattou-curry-2.hatenadiary.org/entry/20090315/1237089749)
 
 ---
@@ -395,6 +409,9 @@ Invoke-Parallel -ScriptBlock {
 ```
 
 ---
+---
+
+## リンク集
 
 ``` cs
     [HttpGet("GetInt/{id}")]
@@ -578,3 +595,146 @@ void Create()
     );
 }
 ```
+
+
+・基本的なWPFプログラムを一通り理解したい。
+・CI/DIツールの導入方法
+
+フロントの何に時間がかかるのか。
+・毎回のデバッグ
+・バインド
+・項目の制御
+・スキル不足
+・全体を把握する力。
+・1つに集中する力。やることがたくさんあると、出来そうな奴から手を付けてしまって混乱してしまう事がままある。
+
+1時間で標準入力からじゃんけんプログラムを作れ。
+30分でfizzbuzz問題を作れ。
+オブジェクト指向とは何かを初心者でもわかるように説明しなさい。
+
+知っているデザインパターンを教えてください。
+5年後の姿を教えてください。
+
+・スイッチは第何層で動く装置だったか。
+
+・ハッシュとは？
+一方通行の関数ではなく
+
+[C++クラスのメモリ展開アドレス](https://freelifetech.com/class-address-placement/)
+[対数の定義](http://www.geisya.or.jp/~mwm48961/kou2/def_log1.html)  
+[C#に潜むstructの罠](https://techblog.kayac.com/trap-around-struct-in-csharp)  
+[WPFのRelativeSourceのはなし](https://hidari-lab.hatenablog.com/entry/wpf_relativesource_self_and_findancestor)  
+[【WPF】RelativeSource(バインディング)の使い方メモ](https://qiita.com/tera1707/items/73cda312b7cd9c4df40d)  
+[InteractionMessageActionの自作](https://days-of-programming.blogspot.com/2018/08/interactionmessageaction.html)  
+
+・比例代表、小選挙区、裁判官のアレ
+純粋に仕組みを知りたい。
+
+[順列と組み合わせの数の公式。どちらを使うのが正しいか迷ったときの便利なテクニック](https://atarimae.biz/archives/11282)  
+
+・符号なし2進数
+→基本情報でやったから問題ないと思うけど。
+・固定小数点数
+→こいつもさんざん調べた。
+[浮動小数点と固定小数点の表現について](https://qiita.com/izuki_y/items/fb3936192f6ec3f555b2)  
+
+[10進数から2進数への変換方法の解説です。](http://www.it-license.com/cardinal_number/DecimalToBinary.html#:~:text=%E6%95%B4%E6%95%B0%E3%81%AE10%E9%80%B2%E6%95%B0%E3%82%922%E9%80%B2%E6%95%B0%E3%81%AB%E5%A4%89%E6%8F%9B%E3%81%99%E3%82%8B,%E3%81%AE%E5%A4%89%E6%8F%9B%E7%B5%90%E6%9E%9C%E3%81%A7%E3%81%82%E3%82%8B%E3%80%82)  
+[「2進法の循環小数」はこうなる](http://oto-suu.seesaa.net/article/204829304.html)  
+
+[システム構築の上流工程強化（非機能要求グレード）](https://www.ipa.go.jp/sec/softwareengineering/std/ent03-b.html)
+
+[条件付確立](https://bellcurve.jp/statistics/course/6438.html)
+
+ilist list 違い
+[[C#]IEnumerableはListではない](https://7mc.org/2021/04/30/c_sharp_ienumerable_and_list.html)
+
+アクティブレポートの設定の仕方をまとめる。
+
+
+
+領収名
+領収　とは
+標準原価法
+会計用語
+
+
+クラサバ構成とは？
+クラサバ 古い
+https://xtech.nikkei.com/it/article/COLUMN/20070820/279919/
+
+at System.Data.SqlClient.SqlConnection.OnError(SqlException exception, Boolean breakConnection, Action`1 wrapCloseInAction)
+End of stack trace from previous location where exception was thrown
+C# スタックトレース　読み方
+
+AHCI
+
+しりあるATA
+https://www.pro.logitec.co.jp/houjin/usernavigation/hddssd/20200417/
+
+ha proxy
+
+
+参照型の変数を宣言した状態のメモリの状態
+newして代入したら、参照先をバインドするのはいいとして、宣言した変数ってメモリ上のどこに配置されるの？
+ただ宣言しただけの状態ってメモリ上ではどういう状態になっているの？
+
+スキャフォールド(scaffold)とは
+https://awesome-linus.com/2019/05/17/what-is-scaffold/
+
+wpf contentcontrol
+DataTemplate
+面積 たん
+坪
+平米
+
+[フロントエンド開発の３ステップ（npmことはじめ）](https://qiita.com/hashrock/items/15f4a4961183cfbb2658)  
+
+名詞とは
+https://ja.wikipedia.org/wiki/%E5%90%8D%E8%A9%9E
+
+fix fixed
+https://jp.blog.voicetube.com/phrases/fixed/
+
+c# object object 違い  
+[C#のStringとstring、Int32とint 違いは・・・ない！](https://araramistudio.jimdo.com/2019/03/06/c-%E3%81%AEstring%E3%81%A8string-int32%E3%81%A8int-%E9%81%95%E3%81%84%E3%81%AF-%E3%81%AA%E3%81%84/)
+
+java byte 符号なし 変換
+<https://www.delftstack.com/ja/howto/java/java-byte-to-int/>  
+
+符号ビット 見分け方
+符号あり、なしは何を持って判断しているのか。
+<https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q1057126335>
+
+
+<https://www.casleyconsulting.co.jp/blog/engineer/266/>
+
+vue デバッグ
+
+<https://qiita.com/azuki8/items/e3bf4c565756c4123576>
+
+・ボタン押したらPOST通信するだけの簡単なツールを作ってみたい  
+C# send post
+<https://www.delftstack.com/ja/howto/csharp/csharp-post-request/>  
+
+原簿
+
+[C言語でTCPソケットを使ってechoサーバーを実装してみた](https://reboooot.net/post/implement-tcp-echo-server/)
+[正規表現まとめ ＋ メールアドレスとURLの正規表現例](https://qiita.com/str32/items/a692073af32757618042)  
+
+・LPIC1のまとめ
+・最小限のAccesser
+・最小限のUtilやJsonから値を取得するサンプル
+
+・なんかコンボボックスの実装飽きたな。
+全く手を付けていない。
+というか、手を付ける以前にもっと学ぶべき基礎的なモノが次から次へと出てきてそれどころではないのもある。
+
+
+・Bindingの書き方。プロパティ構文でプロパティに値を代入するやり方
+・xaml,livetのエラー
+・実行計画のみかた
+・TransactionScopeの分散トランザクション
+・Converterの依存プロパティへの値の設定の仕方をまとめたい。
+・クラス図と関連のまとめ
+・コマンドまとめ
+
