・整理 ・LEFT RIGHT の併用 ・EXSISTS vs DISTINCT ・GROUP BY vs DISTINCT

--- a/Article/ノウハウ.md
+++ b/Article/ノウハウ.md
@@ -57,3 +57,31 @@ git-bash.exeの本体からショートカットを作成する。
 メニューバーから「実行」を選択する。  
 「ファイル名を指定して実行」を選択して、①の作業で作成したショートカットを指定して「実行」して問題がなかったら「登録」する。  
 任意のショートカットキーを指定する。  
+
+---
+
+## タブの名前をコピーする方法
+
+マークダウンで参考リンクを追加するときに、いちいちページの先頭へ移動するのが面倒だったので、探してみた。  
+
+お気に入りダイアログを開いてコピーする。  
+
+`ctrl + D` : お気に入り登録  
+
+`ctrl + D`をやったら自動的にお気に入りに登録されるので、名前のコピーが終わったら除する事。  
+
+[Webブラウザーで開いたページのタイトル（名前）をコピー - パソコントラブルＱ＆Ａ](https://www.724685.com/weekly/qa210113.htm)  
+
+---
+
+## wifiと接続されたら電気をつける
+
+・Tasker  
+・IFTTT  
+・SwitchBot  
+・MailTask  
+
+Taskerでwifi接続イベントを検出する。  
+接続イベントに対してTaskerからMailTaskにアクションを送信する。MailTaskで設定しているメールアドレスに特定の形式のメールを送信する。  
+IFTTTで、設定したメールアドレスに対する特定のメールの受信を検知する。  
+イベントを検知したら設定しているSwitchBotに点灯命令を送信する。  
