--- a/Article/技術力.md
+++ b/Article/技術力.md
@@ -35,3 +35,7 @@ _
 ですので「モダンな技術を使用していないから、転職ができない」ということはありません。  
 寧ろ、企業側は「所持している技術をどこまで使えるか」だったり「チーム力」を重視していると思います。（自分自身が「この技術を使いたい！」という理由で転職活動している場合は、別ですが）  
 [「モダンな技術を使用する＝正解」とは限らない](https://zenn.dev/kageko/articles/57ac42c2cee4d9c3742d)  
+
+---
+
+[平均的プログラマ以前向けのスキルの指標](https://satob.hatenablog.com/entry/2018/10/26/012245)  
