--- a/Article/メモ.md
+++ b/Article/メモ.md
@@ -105,16 +105,16 @@ urlに入力 → `data:text/html,<html contenteditable>`
 
 ## 劣等感との付き合い方
 
-自分の強みが何なのかわからない  
-
-その答えは、簡単です。  
-「何をやっているときが楽しいですか？」  
-その「楽しいもの」が答えです。  
-
-「楽しさ」というのは、最強の強みになります。  
-「楽しい」というだけで、勝手に作業がはかどり、知識が付き、気がついたらその道のプロに到達しています。  
-
-[エンジニアの劣等感との付き合い方](https://qiita.com/karamage/items/771b633c3243989418a2)  
+>自分の強みが何なのかわからない  
+>
+>その答えは、簡単です。  
+>「何をやっているときが楽しいですか？」  
+>その「楽しいもの」が答えです。  
+>
+>「楽しさ」というのは、最強の強みになります。  
+>「楽しい」というだけで、勝手に作業がはかどり、知識が付き、気がついたらその道のプロに到達しています。  
+>
+>[エンジニアの劣等感との付き合い方](https://qiita.com/karamage/items/771b633c3243989418a2)  
 
 ---
 
@@ -149,90 +149,6 @@ urlに入力 → `data:text/html,<html contenteditable>`
 ・学ぶことが楽しいから  
 でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
 [転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
-
----
-
-## 平均的プログラマ以前向けのスキルの指標
-
-[平均的プログラマ以前向けのスキルの指標](https://satob.hatenablog.com/entry/2018/10/26/012245)  
-
-レベル1：  
-プログラムを書こうとするが、「コードは決まった文法で書かないと受理すらされない」ということを理解できず、プログラム言語の文法に沿わないコードを書き続ける。
-
-レベル2：  
-文法に沿ってコードを書こうとはするが、自分の知っている他の文法と食い違いがあるために、そのプログラムの文法を受け入れられない。  「イコール記号は代入を意味する」ということが理解できないケースなど。  
-
-レベル3：  
-ターゲットとしている言語の文法を受け入れることができ、その文法に沿ってコードを書こうとはするが、ループが理解できない。  
-if文は理解できるため、リストの代わりに「userName1」「userName2」……のように大量の変数を並べて処理を書いたりする。  
-
-レベル4：  
-ターゲットとしている言語の文法に従ってコードを書くことができ、ループの概念も理解しているが、コンパイルを通せない。  
-エラーメッセージにはコンパイラがエラーを検知した箇所が含まれているということを理解できない。  
-コンパイルエラーが発生したら、「プログラムを読み返して、怪しいと思った（多くの場合は見当違いな）場所を修正しては再コンパイル」をエラーが出なくなるまで繰り返す。  
-
-レベル5：  
-ターゲットとしている言語のコードを書くことができ、コンパイルを通すことができる。  
-コンパイルエラーは解決できるが、実行時エラーを解決できない。コンパイルが通ったからプログラムは完成だと報告を上げてくる。  
-
-レベル6：  
-実行時エラーが発生しても、めげずに立ち向かえる。  
-エラーの原因を体系的に調査することはできないため、「プログラムを読み返して、怪しいと思った場所を修正しては再実行」をエラーが出なくなるまで繰り返す。  
-結果として、プログラムの挙動が当初の想定から意図せず変わっていたりする。  
-
-レベル7：  
-実行時エラーログの存在は知っており、業務プログラムが出力した日本語のエラーメッセージは読める。  
-一方で、スタックトレースや、英語のエラーメッセージは読めない。  
-そのため、フレームワークやライブラリの内部でエラーが発生すると立ち往生してしまう。  
-
-レベル7.5：  
-実行時エラーが発生した際に、スタックトレースをもとにエラーの原因箇所を調査できる。  
-ただし、エラーメッセージ通りの修正しか行えない。  
-たとえば、NullPointerExceptionが発生していたら、発生箇所の直前にnullチェックを入れるくらいしかできず、根本的な原因までさかのぼった修正（メソッドの戻り値がnullにならないよう引数を確認する、など）は行えない。  
-
-レベル8：  
-実行時エラーが発生した際に、スタックトレースをもとにエラーの原因箇所を調査できる。  
-スタックトレースや英語のエラーメッセージを読んで意味が理解できる。  
-一方で、スタックトレースが出力されなかったり、スタックトレースが直接原因箇所を示さなかったりするエラーは解決できない。  
-
-レベル9：  
-実行時エラーが発生した際に、体系的に原因を調査できる。  
-スタックトレースがなくても、printfデバッグやデバッガの機能を頼りにエラーの発生箇所を特定できる。  
-エラーの原因を調査し、正しいかどうかは別としても簡単な修正が行える。  
-
-レベル10：  
-ターゲットとしている言語のプログラムを読み書きでき、デバッグも行える。  
-ただし、コードを書く際には擬似コードなどで詳細に書かれた内容をもとにする必要があり、与えられた仕様を元に一からコードを書くことはできない。  
-
-レベル11：  
-ターゲットとしている言語のプログラムを読み書きできる。  
-与えられた仕様を元に一から自分でコードを書こうとするが、基本的にはググって見つかったサンプルコードをコピペして、変数名などを調整することで仕様を満たそうとする。  
-作成したコードの中に、与えられた仕様と関係ない処理が混ざっていても、何のためにその処理があるのか理解しておらず、削除するのも怖いので、そのまま放っておく。  
-
-レベル12：  
-ターゲットとしている言語のプログラムを読み書きできる。  
-処理の流れが単純なプログラムなら、処理内容を把握できるし、自分で一から処理内容を考えることもできる。  
-一方で、メソッド呼び出しのネストが深いプログラムでは、処理内容の把握は難しい。  
-ソースコード上の記述の順序とプログラム実行時の動きの順序を区別していない。  
-
-レベル13：  
-ターゲットとしている言語のプログラムを読み書きできる。  
-処理の起点がひとつだけであればプログラムの処理内容を把握できるが、コールバック処理・イベント処理・非同期呼び出しなどがある場合は把握は難しい。  
-
-レベル14：  
-ターゲットとしている言語のプログラムを読み書きできる。  
-与えられた仕様を元に、コールバック処理・イベント処理・非同期呼び出しなどを  使ってコードを書くことができる（利用法が適切とは限らない）。  
-フレームワークのホットスポットにビジネスロジックを実装することはできるが、フレームワークなしでプログラムを書き始めることはできない。  
-
-レベル15：  
-ターゲットとしている言語のプログラムを読み書きできる。  
-与えられた仕様を満たすコードを自分で考えて書くことができるが、行数・性能の  両面とも効率的なコードを書くことは難しい。  
-テーブルルックアップで済む処理をif文の繰り返しやswitch文で実装したり、ハッシュテーブルを使うべき処理でリストを使ったりする。  
-
-レベル16：  
-ターゲットとしている言語のプログラムを読み書きできる。  
-与えられた仕様を元に、コールバック処理・イベント処理・非同期呼び出しや、扱うデータに合った適切なデータ構造を、必要に応じて利用してコードを書くことができる。  
-雛形コードがない場合でも、どのような単位でモジュールを構成すべきかをアプリケーションアーキテクチャをもとに検討して、与えられた仕様を満たすプログラムをスクラッチから開発できる。  
 
 ---
 
